[gd_scene load_steps=14 format=3 uid="uid://yhc18mcq1uk7"]

[ext_resource type="Script" path="res://Levels/Level.gd" id="1_vdmso"]
[ext_resource type="PackedScene" uid="uid://dwsqgd4tix7bb" path="res://HeaderLevelBar/header_bar.tscn" id="2_l5spm"]
[ext_resource type="PackedScene" uid="uid://c71545ntm6a25" path="res://Player/Player.tscn" id="3_1cgcy"]
[ext_resource type="PackedScene" uid="uid://61rh154cdswe" path="res://StarsRain/StarsRain.tscn" id="4_pegvf"]
[ext_resource type="PackedScene" uid="uid://hop855rd06b8" path="res://Levels/LevelGoalArea.tscn" id="5_ysqjd"]
[ext_resource type="PackedScene" uid="uid://bueyv6qwi0jrw" path="res://StarsRain/EstrellaFugaz/SpawnerEstrellas/spawner_estrellas.tscn" id="6_cr1db"]
[ext_resource type="PackedScene" uid="uid://6eolvn4p0iw7" path="res://RainEnviroment/rain_enviroment_particles.tscn" id="7_pqypc"]
[ext_resource type="PackedScene" uid="uid://bt0q7q5tfblkb" path="res://Levels/Parallax/ParallaxBackground.tscn" id="8_wymu4"]
[ext_resource type="PackedScene" uid="uid://m1ogxiuopf84" path="res://Levels/BloquesReutilizables/bloque_1.tscn" id="9_k3x7e"]
[ext_resource type="PackedScene" uid="uid://bonv1t645efqn" path="res://Levels/BloquesReutilizables/bloque_2.tscn" id="10_0oj1w"]
[ext_resource type="PackedScene" uid="uid://bg00sa1mtcdsx" path="res://Levels/BloquesReutilizables/bloque_3.tscn" id="11_ocuuo"]
[ext_resource type="PackedScene" uid="uid://dhcqkivmh5tqg" path="res://Levels/BloquesReutilizables/bloque_final.tscn" id="12_eyiku"]
[ext_resource type="PackedScene" uid="uid://ck3p64601iieq" path="res://DeathZone/DeathZone.tscn" id="17_rjag8"]

[node name="Level2" type="Node2D" groups=["level"]]
script = ExtResource("1_vdmso")
word = "ferter"
time_to_complete = 15.0

[node name="HeaderBar" parent="." instance=ExtResource("2_l5spm")]

[node name="Player" parent="." groups=["player"] instance=ExtResource("3_1cgcy")]
position = Vector2(0, 118)
collision_mask = 9

[node name="StarsRain" parent="." node_paths=PackedStringArray("player", "goal_area") instance=ExtResource("4_pegvf")]
player = NodePath("../Player")
goal_area = NodePath("../LevelGoalArea")
debug = false

[node name="LevelGoalArea" parent="." instance=ExtResource("5_ysqjd")]
position = Vector2(2544, 3)

[node name="SpawnerEstrellas" parent="." instance=ExtResource("6_cr1db")]
position = Vector2(2, -65)

[node name="RainEnviromentParticles" parent="." instance=ExtResource("7_pqypc")]
position = Vector2(-7, -303)

[node name="ParallaxBackground" parent="." instance=ExtResource("8_wymu4")]

[node name="Platforms" type="Node2D" parent="."]

[node name="Bloque1" parent="Platforms" instance=ExtResource("9_k3x7e")]

[node name="Bloque2" parent="Platforms" instance=ExtResource("10_0oj1w")]

[node name="Bloque3" parent="Platforms" instance=ExtResource("11_ocuuo")]

[node name="BloqueFinal" parent="Platforms" instance=ExtResource("12_eyiku")]
position = Vector2(985, 13)

[node name="Bloque4" parent="Platforms" instance=ExtResource("11_ocuuo")]
position = Vector2(264, -4)

[node name="Bloque5" parent="Platforms" instance=ExtResource("10_0oj1w")]
position = Vector2(972, 6)

[node name="Bloque6" parent="Platforms" instance=ExtResource("11_ocuuo")]
position = Vector2(1003, 0)

[node name="DeathZone" parent="." instance=ExtResource("17_rjag8")]
